# TradeLens

./: .gitignore  MODULAR_ARCHITECTURE.md  TODO.md  app.js  data-setup.py  index.html  package-lock.json  readme.md  setup.md  wrangler.toml
.github/: dependabot.yml
api/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirements_macos.txt  requirements_windows.txt  windows_installer.bat
api/data/shared/: cn8_division_industry_product.json  country_embeddings.json  country_embeddings_bge_dump.json  product_names_bge.json
api/src/tradelens/: __init__.py  baci_service.py  common_service.py  data_models.py  embedding.py  prodcom_service.py
api/tests/: test_main.py
app/: .gitignore  build.sh  index.html  install.bat  package-lock.json  package.json  vite.config.js
app/src/: App.jsx
app/src/components/: BaciSearchInterface.jsx  BaseSearchInterface.jsx  DataVisualization.jsx  DatasetSearchInterface.jsx  DatasetSelector.jsx  EmptyState.jsx  GeographicMapPanel.jsx  MarketShareChart.jsx  ProdcomSearchInterface.jsx  ResultsHeader.jsx  SearchPanel.jsx  Sidebar.jsx  TradeDataPlatform.jsx  TradeDataTable.jsx  TradeDataTable_old.jsx  TradeVolumeChart.jsx
app/src/config/: chartConfig.js
app/src/config/datasources/: baci.json  config.production.json  prodcom.json
app/src/hooks/: useDatasetApi.js  useDatasetConfig.js  useModelInfo.js  useTradeQuery.js
app/src/utils/: README.md  csvExport.js
assets/: index-1o-8Hm7x.js  index-BdXPMknM.js  index-Bg7omOfW.css  index-CDtJj_1V.css  index-CLu7OahK.js  index-CjtZHBTQ.js  index-Cz4sfY5o.js  index-Dnp7-XEZ.js  index-DtrDo6pt.js
data-prep/BACI/: baci_merge_files.ipynb
data-prep/autocomplete/: .gitignore  country_names.json  embeddings_gen.ipynb
data-prep/manufacturers_sales/: prodcom_accessiblepublicationtables2024.xlsx  prodcom_prep.ipynb
tradelens/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
tradelens/api/: main.py
tradelens/src/components/: TradeDataPlatform.jsx
