[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradelens"
version = "0.1.0"
description = "TradeLens global trade data visualisation."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "boto3==1.34.20",
    "botocore==1.34.20",
    "branca==0.8.1",
    "bs4==0.0.2",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "cramjam==2.11.0",
    "debugpy==1.8.15",
    "decorator==5.2.1",
    "distro==1.9.0",
    "duckdb==1.3.1",
    "et_xmlfile==2.0.0",
    "executing==2.2.0",
    "fastapi==0.115.13",
    "fastparquet==2024.11.0",
    "filelock==3.18.0",
    "folium==0.20.0",
    "fsspec==2025.5.1",
    "geopandas==1.1.1",
    "h11==0.16.0",
    "hf_xet==1.4.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.34.1",
    "idna==3.10",
    "ipykernel==6.30.0",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jmespath==1.0.1",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "narwhals==1.47.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "numpy==1.26.4",
    "openai==1.97.0",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==20.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyogrio==0.11.0",
    "pyproj==3.7.1",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pywin32==311",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rpds-py==0.26.0",
    "s3transfer==0.10.4",
    "safetensors==0.5.3",
    "scikit-learn==1.7.1",
    "scipy==1.16.0",
    "sentence-transformers==5.0.0",
    "shapely==2.1.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.4",
    "torch==2.2.0",
    "torchaudio==2.2.0",
    "torchvision==0.17.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==5.6.2",
    "typing-inspection==0.4.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.0.7",
    "uvicorn==0.34.3",
    "wcwidth==0.2.13",
    "xyzservices==2025.4.0"
]

license = { text = "MIT" }

# packages inside ./
[tool.setuptools.packages.find]
where = ["./src/"]